--- a/SocialTest/Base.lproj/Main.storyboard
+++ b/SocialTest/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SocialTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="SocialTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,55 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gUh-P2-zdJ">
+                                <rect key="frame" x="50" y="245" width="500" height="110"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zVx-bQ-4HS" customClass="FBSDKLoginButton">
+                                        <rect key="frame" x="0.0" y="0.0" width="500" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="P81-bk-l0t"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RdD-jB-VGx" customClass="TWTRLogInButton">
+                                        <rect key="frame" x="0.0" y="40" width="500" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="1rV-6t-P7T"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zGu-2L-FYg" customClass="GIDSignInButton">
+                                        <rect key="frame" x="0.0" y="80" width="500" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="xR3-Uv-c5V"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="kZa-Wl-CRX"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="kZa-Wl-CRX"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="gUh-P2-zdJ" secondAttribute="trailing" constant="50" id="DMX-Lq-m3o"/>
+                            <constraint firstItem="gUh-P2-zdJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="VnI-Q7-thx"/>
+                            <constraint firstItem="gUh-P2-zdJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cKd-aK-8kC"/>
+                            <constraint firstItem="gUh-P2-zdJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zbe-X9-2CJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="CRq-l0-MJD"/>
                     <connections>
-                        <segue destination="hOt-mw-K6Q" kind="show" identifier="toProfileViewController" id="0dE-O0-gdP"/>
+                        <outlet property="fbLoginButton" destination="zVx-bQ-4HS" id="Mbg-bE-jSm"/>
+                        <outlet property="gidSignInButton" destination="zGu-2L-FYg" id="AJo-qv-o7I"/>
+                        <outlet property="twtrLoginButton" destination="RdD-jB-VGx" id="w0D-sz-gvx"/>
+                        <segue destination="hOt-mw-K6Q" kind="presentation" identifier="toProfileViewController" id="0dE-O0-gdP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -29,7 +73,7 @@
         <!--Profile View Controller-->
         <scene sceneID="oqy-Xg-RG0">
             <objects>
-                <viewController id="hOt-mw-K6Q" customClass="ProfileViewController" customModule="SocialTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewController" id="hOt-mw-K6Q" customClass="ProfileViewController" customModule="SocialTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cMB-cC-tfe"/>
                         <viewControllerLayoutGuide type="bottom" id="cjK-II-4KA"/>
@@ -38,27 +82,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VMd-ru-2Xk">
+                                <rect key="frame" x="250" y="200" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Gya-YJ-MHJ"/>
+                                    <constraint firstAttribute="width" constant="100" id="MC7-iA-iZn"/>
+                                </constraints>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9oc-tg-EQm">
-                                <rect key="frame" x="279" y="164" width="42" height="21"/>
+                                <rect key="frame" x="279" y="320" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVg-El-dZg">
+                                <rect key="frame" x="0.0" y="560" width="600" height="40"/>
+                                <color key="backgroundColor" red="0.76862745099999996" green="0.77647058820000003" blue="0.80392156859999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="xph-51-M7N"/>
+                                </constraints>
+                                <state key="normal" title="LOGOUT"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="oVg-El-dZg" firstAttribute="width" secondItem="BwG-Sy-LOF" secondAttribute="width" id="11v-iG-jyO"/>
+                            <constraint firstItem="9oc-tg-EQm" firstAttribute="top" secondItem="VMd-ru-2Xk" secondAttribute="bottom" constant="20" id="IKC-Gm-xOG"/>
+                            <constraint firstItem="VMd-ru-2Xk" firstAttribute="top" secondItem="cMB-cC-tfe" secondAttribute="bottom" constant="20" id="Qr3-jt-ODD"/>
                             <constraint firstItem="9oc-tg-EQm" firstAttribute="centerX" secondItem="BwG-Sy-LOF" secondAttribute="centerX" id="U3i-dM-vAF"/>
+                            <constraint firstItem="oVg-El-dZg" firstAttribute="centerX" secondItem="BwG-Sy-LOF" secondAttribute="centerX" id="aOc-dv-7eA"/>
+                            <constraint firstItem="cjK-II-4KA" firstAttribute="top" secondItem="oVg-El-dZg" secondAttribute="bottom" id="b8N-TV-mOI"/>
+                            <constraint firstItem="VMd-ru-2Xk" firstAttribute="centerX" secondItem="BwG-Sy-LOF" secondAttribute="centerX" id="bhZ-lY-XYg"/>
                             <constraint firstItem="9oc-tg-EQm" firstAttribute="centerY" secondItem="BwG-Sy-LOF" secondAttribute="centerY" id="s1e-zm-yuw"/>
+                            <constraint firstItem="VMd-ru-2Xk" firstAttribute="centerY" secondItem="BwG-Sy-LOF" secondAttribute="centerY" constant="-50" id="xKR-CR-8wW"/>
                             <constraint firstItem="9oc-tg-EQm" firstAttribute="top" secondItem="cMB-cC-tfe" secondAttribute="bottom" constant="100" id="xo3-72-N1J"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="Qr3-jt-ODD"/>
                                 <exclude reference="s1e-zm-yuw"/>
+                                <exclude reference="xo3-72-N1J"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="logoutButton" destination="oVg-El-dZg" id="dT4-Pc-kTI"/>
                         <outlet property="nameLabel" destination="9oc-tg-EQm" id="3Cj-7t-Nlo"/>
+                        <outlet property="profileImageView" destination="VMd-ru-2Xk" id="xtt-K6-9Ze"/>
                         <segue destination="9rI-CX-p4W" kind="unwind" identifier="returnToLogin" unwindAction="returnToLogin:" id="mua-TD-IKW"/>
                     </connections>
                 </viewController>
